--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -2,9 +2,25 @@
 
 $font-family: 'Rubik', sans-serif;
 $primary-color: #2C2C2C;
+$white-color: #FFFFFF;
+$black-color: #000000;
 
 :root {
-box-sizing: border-box;
 font-family: $font-family;
 color: $primary-color;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 70vh;
+  z-index: -1;
+  margin-top: -72px;
 }
