make screens responsive

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -23,4 +23,8 @@ body {
   height: 70vh;
   z-index: -1;
   margin-top: -72px;
+  @media screen and (max-width: 500px) {
+  margin-top: -43%;
 }
+}
+
